# docs/swagger.yaml
@@ -1,12 +1,5 @@
 basePath: /api
 definitions:
-  dto.AuthResponse:
-    properties:
-      accessToken:
-        type: string
-      refreshToken:
-        type: string
-    type: object
   dto.LoginRequest:
     properties:
       email:
@@ -51,14 +44,45 @@ paths:
       - application/json
       responses:
         "200":
-          description: OK
+          description: Access token header’da, refresh HttpOnly cookie’de
           schema:
-            $ref: '#/definitions/dto.AuthResponse'
+            type: string
         "401":
           description: Unauthorized
           schema:
             type: string
       summary: Login
+      tags:
+      - Auth
+  /auth/logout:
+    post:
+      description: Refresh cookie’yi temizler (logout)
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: Logout
+      tags:
+      - Auth
+  /auth/refresh:
+    post:
+      description: HttpOnly cookie’deki refresh token ile yeni access token üretir.
+        (Opsiyonel rotation)
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Access token header’da, refresh cookie opsiyonel yenilenir
+          schema:
+            type: string
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+      summary: Refresh access token
       tags:
       - Auth
   /auth/register:
@@ -77,9 +101,9 @@ paths:
       - application/json
       responses:
         "201":
-          description: Created
+          description: Access token header’da, refresh HttpOnly cookie’de
           schema:
-            $ref: '#/definitions/dto.AuthResponse'
+            type: string
         "400":
           description: Bad Request
           schema:
